# ApueDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: testcp
app/src/main/cpp/: ChapterEightJni.cpp  ChapterEleven.cpp  ChapterFiveJni.cpp  ChapterFourJni.cpp  ChapterNineJni.cpp  ChapterOneJni.cpp  ChapterSevenJni.cpp  ChapterSixJni.cpp  ChapterTenJni.cpp  ChapterThreeJni.cpp  ChapterTwelve.cpp  ChapterTwoJni.cpp  HelloJni.cpp
app/src/main/cpp/cp/: cp.c  setprogname.c  setprogname.h  utils.c
app/src/main/cpp/include/: com_crab_test_apuedemo_jni_ChapterEightJni.h  com_crab_test_apuedemo_jni_ChapterElevenJni.h  com_crab_test_apuedemo_jni_ChapterFiveJni.h  com_crab_test_apuedemo_jni_ChapterFourJni.h  com_crab_test_apuedemo_jni_ChapterNineJni.h  com_crab_test_apuedemo_jni_ChapterOneJni.h  com_crab_test_apuedemo_jni_ChapterSevenJni.h  com_crab_test_apuedemo_jni_ChapterSixJni.h  com_crab_test_apuedemo_jni_ChapterTenJni.h  com_crab_test_apuedemo_jni_ChapterThreeJni.h  com_crab_test_apuedemo_jni_ChapterTwelveJni.h  com_crab_test_apuedemo_jni_ChapterTwoJni.h  com_crab_test_apuedemo_jni_HelloJni.h
app/src/main/java/com/crab/test/apuedemo/: AbsListActivity.java  ChapterEightActivity.java  ChapterElevenActivity.java  ChapterFiveActivity.java  ChapterFourActivity.java  ChapterNineActivity.java  ChapterOneActivity.java  ChapterSevenActivity.java  ChapterSixActivity.java  ChapterTenActivity.java  ChapterThreeActivity.java  ChapterTwelveActivity.java  ChapterTwoActivity.java  MainActivity.java  MyApplication.java
app/src/main/java/com/crab/test/apuedemo/jni/: ChapterEightJni.java  ChapterElevenJni.java  ChapterFiveJni.java  ChapterFourJni.java  ChapterNineJni.java  ChapterOneJni.java  ChapterSevenJni.java  ChapterSixJni.java  ChapterTenJni.java  ChapterThreeJni.java  ChapterTwelveJni.java  ChapterTwoJni.java  HelloJni.java
app/src/main/res/layout/: list_activity.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
